# SmoothDLP

./: .gitignore  .gitignore.swp  CLAUDE.md  README.md  environment.yml  factorsNotebook.ipynb  infraNotebook.ipynb  primesNotebook.ipynb  pyproject.toml  sage_scripts.py  setup.py  smoothNotebook.ipynb  testNotebook.ipynb  testTools.py
.github/workflows/: ci.yml
assets/: large_prime_dataset.json  semiprimes.npy  temp_data.txt
benchmarks/: README.md  analyze.py  bench_average_case.py  bench_worst_case.py  common.py  run_all.py
benchmarks/results/: all_results.csv  average_case.csv  worst_case.csv
notebooks/: factorsNotebook.ipynb  infraNotebook.ipynb  primesNotebook.ipynb  smoothNotebook.ipynb  testNotebook.ipynb
smooth/: __init__.py  bench_helpers.cpp  bench_helpers.h  core.cpp  dlp.cpp  dlp.h  dlp_infra.cpp  dlp_infra.h  gauss_dream.cpp  gauss_dream.h  infra.cpp  infra.h  smooth_algos.cpp  smooth_algos.h
smoothNumbers/: pyvenv.cfg
src/: ##montgomery.cpp##  #infra.h#  #lin_alg.cpp#  #montgomery.h#  .#infra.h  __init__.py  core.cpp  dlp.cpp  dlp.cpp~  dlp.h  dlp.h~  gauss_dream.cpp  gauss_dream.h  infra.cpp  infra.h  lin_alg.cpp  lin_alg.h  montgomery.cpp  montgomery.h  smooth_algos.cpp  smooth_algos.h  types.h
tests/: conftest.py  test_dlp.py  test_gauss_dream.py  test_infra.py  test_smooth_algos.py
tests/internal/: Makefile  test_dlp.cpp  test_gauss_dream  test_gauss_dream.cpp  test_infra  test_infra.cpp  test_lin_alg  test_lin_alg.cpp  test_montgomery.cpp  test_smooth_algos  test_smooth_algos.cpp
tests/internal/test_infra.dSYM/Contents/: Info.plist
(+11 files in other folders)
